// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem 1`] = `
<div>
  <[object Object]
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </[object Object]>
  <p>
    $1.95
    -
    01-Jan-1970
  </p>
</div>
`;

exports[`should render ExpenseListItem with no data 1`] = `
<div>
  <[object Object]
    to="/edit/undefined"
  >
    <h3 />
  </[object Object]>
  <p>
    $0.00
    -
    01-Jan-1970
  </p>
</div>
`;
